# rust-api-boilerplate

./: .env  .env.example  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
.sqlx/: query-106e95d2124eb8e37d28b1e5b7707e440e81d08f5f814725dea3fb8f3bd083b7.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-fb542b7d16bf938b2823858cfbb2c90c0b92b861810018d4b79383cefb5a511d.json
crates/database/: .env  Cargo.toml
crates/database/.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-e35700b7770831ee08b905be43d2f192cb2b3a401386a2d9545e23c4e6959863.json  query-eb8bf089edb33514258f4d4a204cf6dfedb436537dc469888e3352a8382b2467.json
crates/database/migrations/: 20250207145957_user.up.sql
crates/database/src/: lib.rs
crates/database/src/refresh_token/: model.rs  repository.rs
crates/database/src/user/: model.rs  repository.rs
crates/database/tests/: user.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  logger.rs  main.rs  router.rs
crates/server/src/api/: auth.rs  health.rs  mod.rs  users.rs
crates/server/src/dtos/: auth_dto.rs  mod.rs  user_dto.rs
crates/server/src/extractors/: auth_extractor.rs  mod.rs  validation_extractor.rs
crates/server/src/services/: auth.rs  mod.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  errors.rs
migrations/: 20250207145946_user.up.sql  20250208000000_refresh_tokens.up.sql
