[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
serde.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"
tracing.workspace = true
utils = {path = "../utils"}
uuid = { version = "1.13.1", features = ["serde", "v4"] }
validator.workspace = true
