[package]
name = "server"
version = "0.1.0"
edition = "2021"
metadata.workspace = true

[[bin]]
name = "rust-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait.workspace = true
axum = { workspace = true }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
lazy_static.workspace = true
listenfd = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tower.workspace = true
tower-http.workspace = true
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
utils = {path = "../utils"}
validator.workspace = true
